# ConfigEndpoint

./: .gitignore  CMakeLists.txt  README.md  cert.pem  key.pem
data/secrets/: X509-cert-4563301956981439227.pem  config.json
src/: main.cpp
